# solana-depin-examples

coffee-shop/: .gitignore  Anchor.toml  Cargo.toml  package.json
coffee-shop/controller/: Cargo.toml  README.md
coffee-shop/controller/src/: lib.rs  main.rs  message.rs
coffee-shop/controller/src/node/: message_handler.rs
coffee-shop/programs/solana-bar/: Cargo.toml
