[package]
name = "coffee-shop-controller"
version = "0.1.0"
edition = "2021"

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_with"]

[dependencies]
borsh = "0.10.4"
clap = "4.5.29"
futures = "0.3.31"
nostr = "0.38.0"
nostr-sdk = "0.38.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
serde = {version = "1.0.217", optional = true}
serde_json = "1.0.137"
serde_with = {version = "3.12.0", optional = true }
solana-client = "2.2.0"
solana-program = "2.2.0"
solana-sdk = "2.2.0"
solana-zk-token-sdk = "2.2.0"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["process", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
