[package]
name = "solana-bar"
version = "0.1.0"
description = "Buy shots with Solana Pay"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_bar"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.0"
ahash = "0.8.11"